[package]
name = "ip_export"
version = "0.1.0"
authors = ["liwei"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full", "macros"] }
regex = "1"
clap = "3.0.0-beta.1"
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
